<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="cliente123" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textShortMessage"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbNif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nif"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbCodPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/codPostal"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <EditText
        android:id="@+id/tbMorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/morada"
        android:inputType="textShortMessage"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:onClick="onClickRegister"
        android:shadowColor="@color/purple_500"
        android:text="@string/register" />
</LinearLayout>