<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="82dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/tbUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <EditText
        android:id="@+id/tbPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="cliente123" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:onClick="onClickLogin"
        android:shadowColor="@color/purple_500"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:onClick="onClickRegister"
        android:shadowColor="@color/purple_500"
        android:text="@string/newAccount" />
</LinearLayout>
